--- a/BeDocker/Views/Home/Index.cshtml
+++ b/BeDocker/Views/Home/Index.cshtml
@@ -5,9 +5,16 @@
 <div class="text-center">
     <div class="main-container">
         <div class="second-container">
-            <a class="name-input-for-giphy">Search for giphy</a>
-            <input class="input-for-giphy" />
-            <button class="btn btn-primary btn-search">Search</button>
+            <a class="name-input-for-giphy">Search</a>
+            <input class="input-for-giphy d-block" />
+            <button type="button" class="btn btn-w btn-outline-primary mt-3 ml-4 p-2 app-giphy">Giphy</button>
+            <button type="button" class="btn btn-w btn-outline-primary mt-3 ml-5 p-2 app-images">Images</button>
+            <button type="button" class="btn btn-w btn-outline-primary mt-3 ml-5 p-2 app-videos">Videos</button>
+            <a type="button" class="btn btn-w btn-outline-primary mt-3 ml-4 p-2" id="design-button" href="https://localhost:44390/Home/Chat">Text</a>
+            <div class="mt-3 number-class">
+                <span class="d-inline">No:</span>
+                <input class="input-count" value="1"/>
+            </div>
         </div>
     </div>
     <div class="main-container">
