--- a/BeDocker/Views/Shared/_Layout.cshtml
+++ b/BeDocker/Views/Shared/_Layout.cshtml
@@ -23,6 +23,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Search</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Chat">Chat</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="ShowHistory">History</a>
                         </li>
                     </ul>
