--- a/BeDocker/Views/Home/chat.cshtml
+++ b/BeDocker/Views/Home/chat.cshtml
@@ -5,7 +5,7 @@
 <div class="text-center">
     <div class="main-container">
         <div class="second-container">
-            <a class="name-input-for-giphy">Chat</a>
+            <a class="name-input-for-giphy">Text</a>
             <input class="input-for-text input-for-giphy d-block" />
             <button type="button" class="btn btn-outline-primary btn-enter mt-5 p-2 app-chat">Enter</button>
         </div>
